# mynah

./: Makefile  Makefile.in  a.txt  b.txt  config.h  config.status  configure  configure.ac  mynah.h  result.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: common.h  line.h  mynah.h  parse.h
src/: Makefile  Makefile.am  Makefile.in  assemble.c  line.c  mynah  mynah.c  parse.c
src/.deps/: line.Po  mynah.Po  parse.Po
src/mynah.dSYM/Contents/: Info.plist
src/mynah.dSYM/Contents/Resources/DWARF/: mynah
